--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -7,13 +7,13 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-test:
     name: Build and test CI scheme
     runs-on: macos-latest
 
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Cleand Build and Test
         run: |
           xcodebuild clean build test -project EssentialFeed.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
